--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "start2":"nodemon src/server.js"
+    "start2": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.29.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "image-downloader": "^4.1.0",
     "mongoose": "^6.2.7",
